objects/Quote_Line__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalLevel__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field decide the Quote Line&apos; s approval level. It gets value from &apos;initApprovalLevel&apos; trigger. The custom setting &apos;Quote Approval Matrix&apos; finally defines the level of the Quote Line through its Type and Discount.
Type: 
a) Physical (Physical Appliance)
b) VIrtual (Virtual Appliance )
c) New Business( Subscription Product for Virtual Appliance on Opp type of New Business )

Line Item approval level requirements are: 
for &quot;a&quot;, over 35% goes to level 1, over 45% goes to level 2 and over 50% goes to level 3 
for &quot;b&quot;, over 45% goes to level 1, over 50% goes to level 2 and over 60% goes to level 3 
for &quot;c&apos;, over 50% goes to level 1, over 60% goes to level 2 and over 70% goes to level 3</description>
        <label>Approval Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <description>There are three types in &apos;Quote Approval Matrix&apos; custom setting. 
a) Physical (Physical Appliance )
b) Virtual ( Virtual Appliance )
c) New Business (Subscription Product for Virtual Appliance on Opp type of New Business)
This field is to define which type this quote line need when approval.</description>
        <formula>IF(OR(ISPICKVAL(Quote__r.Opportunity__r.Type , &apos;Support Renewal&apos;),ISPICKVAL(Quote__r.Opportunity__r.Type , &apos;Subscription Renewal&apos;),ISPICKVAL(Quote__r.Opportunity__r.Type , &apos;EC Renewal&apos;)),&apos;Renewal&apos;,
IF( IsAppliance__c =1,
CASE( Product__r.Product_Family_Clean__c , &apos;Virtual&apos;, IF( AND( ISPICKVAL(Product__r.Product_Category__c , &apos;Subscription&apos;) , ISPICKVAL(Quote__r.Opportunity__r.Type , &apos;New Business&apos;) ) , &apos;New Business&apos;, &apos;Virtual&apos;) , &apos;Physical&apos;), &apos;Service&apos;)
)</formula>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Spread__c</fullName>
        <formula>IF((Discount_Percent__c - Reseller_Discount__c)&lt;0,0,(Discount_Percent__c - Reseller_Discount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_field__c</fullName>
        <formula>Quote__r.Opportunity__r.Primary_Partner__r.Standard_Discount_EdgeConnect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Include4ConsultingDisc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Include4ConsultingDisc</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include4Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Include4Discount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include4MultiYYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Include4MultiYYear</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include4ServiceDiscount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Include4ServiceDiscount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAppliance__c</fullName>
        <description>formula before WANCHECK: if( OR(Contains( Prod_Category__c     , &quot;Appliance&quot;),Contains( Prod_Category__c     , &quot;GMS&quot;)) ,1,0)
formula with WANCHECK as a product: if( OR(Contains( Prod_Category__c , &quot;Appliance&quot;),Contains( Prod_Category__c , &quot;GMS&quot;), Product__r.ProductCode =&apos;300058-001&apos;) ,1,0)</description>
        <formula>if( OR(Contains( Prod_Category__c     , &quot;Appliance&quot;),Contains( Prod_Category__c     , &quot;Upgrade&quot;),Contains( Prod_Category__c     , &quot;GMS&quot;), Contains( Prod_Category__c     , &quot;Subscription&quot;)) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAppliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Price__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainDisc__c</fullName>
        <formula>if( contains(Prod_Category__c, &quot;Maintenance&quot;),  Discount_Percent__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MainDisc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maint_Year_Value__c</fullName>
        <formula>IF(
AND(
Include4ServiceDiscount__c==1,
Product__r.Term__c&lt;=1
),
1, Product__r.Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint Year Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiYearMaint__c</fullName>
        <formula>if( isMaintenance__c =1 ,if( contains(Prod_Category__c ,&apos;2&apos;),2,if(contains( Prod_Category__c ,&apos;3&apos;),3,1)),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiYearMaint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Registered_Disc_EC__c</fullName>
        <formula>IF(NOT(ISBLANK( Quote__r.Tier_2_Partner__c )),Quote__r.Tier_2_Partner__r.Registered_Discount_EdgeConnect__c,Quote__r.Tier_1_Partner__r.Registered_Discount_EdgeConnect__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Registered Disc EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Registered_Disc_NXVX__c</fullName>
        <formula>IF(NOT(ISBLANK( Quote__r.Tier_2_Partner__c )),Quote__r.Tier_2_Partner__r.Registered_Discount_Product__c,Quote__r.Tier_1_Partner__r.Registered_Discount_Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Registered Disc NXVX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Registered_Disc_Service__c</fullName>
        <formula>IF(NOT(ISBLANK( Quote__r.Tier_2_Partner__c )),Quote__r.Tier_2_Partner__r.Registered_Discount_Service__c,Quote__r.Tier_1_Partner__r.Registered_Discount_Service__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Registered Disc Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProdDisc__c</fullName>
        <formula>if( contains(Prod_Category__c, &quot;Appliance&quot;),  Discount_Percent__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdDisc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prod_Category__c</fullName>
        <formula>TEXT(Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod_Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List__c</fullName>
        <formula>( Unit_Price__c /(1- Discount_Percent__c ))* Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Quote_Type__c</fullName>
        <formula>TEXT(Product__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reseller_Discount__c</fullName>
        <formula>IF(
Include4ServiceDiscount__c==1,Primary_Partner_Registered_Disc_Service__c, 
IF(
AND(Include4ServiceDiscount__c==0,
OR( 
ISPICKVAL(Product__r.Product_Type__c,&quot;EDGECONNECT&quot;), 
ISPICKVAL(Product__r.Product_Type__c,&quot;EC-SP-Perpetual&quot;), 
ISPICKVAL(Product__r.Product_Type__c,&quot;EC-SP-Term&quot;) ,
ISPICKVAL(Product__r.Product_Type__c,&quot;EC-SP-Metered&quot;) 
)),Primary_Partner_Registered_Disc_EC__c,
IF(
AND(
Include4ServiceDiscount__c==0,
ISPICKVAL(Product__r.Product_Type__c,&quot;NX/VX&quot;)
),Primary_Partner_Registered_Disc_NXVX__c,0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isConsulting__c</fullName>
        <formula>if(Contains( Prod_Category__c  ,&quot;Consulting&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isConsulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMaintenance__c</fullName>
        <formula>if(contains(Prod_Category__c ,&quot;Maintenance&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMaintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL{00000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DiscountShouldNotGreaterThan2000</fullName>
        <active>true</active>
        <errorConditionFormula>Discount_Percent__c  &gt; 20</errorConditionFormula>
        <errorDisplayField>Discount_Percent__c</errorDisplayField>
        <errorMessage>Number is too large.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuantityShouldNotEqualToZero</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c = 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Invalid quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WholeNumberQuantity</fullName>
        <active>true</active>
        <description>Quantity shold be whole number if product family is not service</description>
        <errorConditionFormula>TEXT(Product__r.Family) != &quot;Support&quot; &amp;&amp; TEXT(Product__r.Family) != &quot;Service&quot; &amp;&amp; CEILING(Quantity__c) != Quantity__c &amp;&amp; !CONTAINS( Product__r.Name, &quot;SUBSCRIPTION RENEWAL&quot; )</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity should be whole number.</errorMessage>
    </validationRules>
</CustomObject>